@@ -1,7 +1,9 @@
+
 2012-10-29 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-02-19
 	* Total input rate 1D plot
+	* flashlist data for shipping cpu loads to DB
 
 2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>
 
